[gd_scene load_steps=37 format=3 uid="uid://ckmwc2rfd0fwc"]

[ext_resource type="Environment" path="res://addons/visual_shader_node_library/examples/3D/default_env.tres" id="1"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/emission_add.gd" id="2"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/emission_multiply.gd" id="3"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/refraction.gd" id="4"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/dither.gd" id="9"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/depth_world_position.gd" id="10"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/common/rotation_2d.gd" id="11"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/deep_parallax.gd" id="12"]
[ext_resource type="PackedScene" path="res://addons/visual_shader_node_library/examples/3D/models/test_bed/test_bed.tscn" id="17"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/examples/3D/tester.gd" id="18"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/depth.gd" id="19"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/common/rotation_3d.gd" id="20"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/common/flowmap_add_uv.gd" id="21"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/common/flowmap.gd" id="22"]
[ext_resource type="Script" path="res://addons/visual_shader_node_library/shader_nodes/3d/object_world_position.gd" id="23"]
[ext_resource type="PackedScene" path="res://addons/visual_shader_node_library/examples/3D/models/terrain.tscn" id="25"]
[ext_resource type="Material" uid="uid://cekvwfoxxu38" path="res://addons/visual_shader_node_library/examples/3D/models/proc_wood.material" id="28"]

[sub_resource type="SphereMesh" id="1"]
radius = 1.5
height = 3.0

[sub_resource type="BoxMesh" id="83"]

[sub_resource type="PlaneMesh" id="109"]
size = Vector2(2.5, 2.5)

[sub_resource type="Shortcut" id="124"]

[sub_resource type="Shortcut" id="126"]

[sub_resource type="VisualShaderNodeCustom" id="127"]
initialized = true
script = ExtResource("23")

[sub_resource type="VisualShaderNodeCustom" id="128"]
default_input_values = [1, 0.05, 2, 0.0, 4, 1.0]
initialized = true
script = ExtResource("4")

[sub_resource type="VisualShaderNodeCustom" id="129"]
default_input_values = [1, 5.0, 2, 1.0, 5, 0.0]
initialized = true
script = ExtResource("22")

[sub_resource type="VisualShaderNodeCustom" id="130"]
default_input_values = [1, 1.0]
initialized = true
script = ExtResource("21")

[sub_resource type="VisualShaderNodeCustom" id="131"]
initialized = true
script = ExtResource("11")

[sub_resource type="VisualShaderNodeCustom" id="132"]
default_input_values = [1, 0.0]
initialized = true
script = ExtResource("20")

[sub_resource type="VisualShaderNodeCustom" id="133"]
default_input_values = [2, 0.05, 3, 8, 4, 32, 9, Vector2(1, 1)]
initialized = true
script = ExtResource("12")

[sub_resource type="VisualShaderNodeCustom" id="134"]
default_input_values = [2, 0.05, 9, Vector2(1, 1)]
initialized = true
script = ExtResource("19")

[sub_resource type="VisualShaderNodeCustom" id="135"]
initialized = true
script = ExtResource("10")

[sub_resource type="VisualShaderNodeCustom" id="136"]
default_input_values = [0, 1.0]
initialized = true
script = ExtResource("9")

[sub_resource type="VisualShaderNodeCustom" id="137"]
default_input_values = [2, 1.0]
initialized = true
script = ExtResource("2")

[sub_resource type="VisualShaderNodeCustom" id="138"]
default_input_values = [2, 1.0]
initialized = true
script = ExtResource("3")

[sub_resource type="VisualShader" id="141"]
code = "shader_type spatial;


"
graph_offset = Vector2(254.4, -300)
nodes/fragment/0/position = Vector2(980, 300)
nodes/fragment/2/node = SubResource("133")
nodes/fragment/2/position = Vector2(980, 1620)
nodes/fragment/3/node = SubResource("134")
nodes/fragment/3/position = Vector2(980, 2320)
nodes/fragment/4/node = SubResource("135")
nodes/fragment/4/position = Vector2(980, 2880)
nodes/fragment/5/node = SubResource("136")
nodes/fragment/5/position = Vector2(980, 3100)
nodes/fragment/6/node = SubResource("137")
nodes/fragment/6/position = Vector2(980, 3320)
nodes/fragment/7/node = SubResource("138")
nodes/fragment/7/position = Vector2(980, 3660)
nodes/fragment/10/node = SubResource("127")
nodes/fragment/10/position = Vector2(980, 4320)
nodes/fragment/11/node = SubResource("128")
nodes/fragment/11/position = Vector2(980, 4540)
nodes/fragment/12/node = SubResource("129")
nodes/fragment/12/position = Vector2(980, 5080)
nodes/fragment/13/node = SubResource("130")
nodes/fragment/13/position = Vector2(980, 5580)
nodes/fragment/14/node = SubResource("131")
nodes/fragment/14/position = Vector2(980, 5940)
nodes/fragment/15/node = SubResource("132")
nodes/fragment/15/position = Vector2(980, 6260)

[sub_resource type="ShaderMaterial" id="142"]
render_priority = 0
shader = SubResource("141")

[node name="MaterialTester" type="Node3D"]
script = ExtResource("18")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1")

[node name="Testers" type="Node3D" parent="."]

[node name="Deep Parallax (Depth)" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -42, 0, 0)

[node name="MeshInstance6" type="MeshInstance3D" parent="Testers/Deep Parallax (Depth)"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32702, -4)
mesh = SubResource("1")

[node name="Emission" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -36, 0, 0)

[node name="SpotLight3D" parent="Testers/Emission" index="2"]
light_energy = 0.0

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Emission"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32702, -4)
mesh = SubResource("1")

[node name="Refraction" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0)

[node name="MeshInstance5" type="MeshInstance3D" parent="Testers/Refraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32702, -4)
mesh = SubResource("1")

[node name="Screen Space Refraction" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, 0)

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Screen Space Refraction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32702, -4)
mesh = SubResource("1")

[node name="Pixel Dither" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 0)

[node name="MeshInstance6" type="MeshInstance3D" parent="Testers/Pixel Dither"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32702, -4)
mesh = SubResource("1")

[node name="Proximity Fade" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, 0)

[node name="MeshInstance3" type="MeshInstance3D" parent="Testers/Proximity Fade"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69747, -4)
mesh = SubResource("1")

[node name="Proximity Fade Dither" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Proximity Fade Dither"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69747, -4)
mesh = SubResource("1")

[node name="Distance Fade (Zoom in and out)" parent="Testers" instance=ExtResource("17")]

[node name="MeshInstance3" type="MeshInstance3D" parent="Testers/Distance Fade (Zoom in and out)"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69747, -4)
mesh = SubResource("1")

[node name="Distance Fade Pixel Dither (Zoom in and out)" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Distance Fade Pixel Dither (Zoom in and out)"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69747, -4)
mesh = SubResource("1")

[node name="Rotation Around origin (local)" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 0)

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Rotation Around origin (local)"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69747, -4)
mesh = SubResource("83")

[node name="Rotation Around Pivot (local)" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, 0)

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Rotation Around Pivot (local)"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.69747, -4)
mesh = SubResource("83")

[node name="Flowmap UV Animation" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 0)

[node name="terrain" parent="Testers/Flowmap UV Animation" instance=ExtResource("25")]
transform = Transform3D(0.04, 0, 0, 0, 0.04, -2.45869e-08, 0, 2.45869e-08, 0.04, 0, 2.69747, -4)

[node name="MeshInstance4" type="MeshInstance3D" parent="Testers/Flowmap UV Animation"]
transform = Transform3D(1.6, 0, 0, 0, 1.6, 9.53674e-08, 0, -9.53674e-08, 1.6, 0, 2.70468, -4)
mesh = SubResource("109")

[node name="Procedural wood texture" parent="Testers" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0)

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Testers/Procedural wood texture"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.62688, -3.98016)

[node name="CSGBox3D" type="CSGBox3D" parent="Testers/Procedural wood texture/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.59124, 0.27598, 0)
size = Vector3(0.306, 2.615, 2.287)
material = ExtResource("28")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Testers/Procedural wood texture/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.000206232)
radius = 0.511
sides = 64
material = ExtResource("28")

[node name="CSGBox2" type="CSGBox3D" parent="Testers/Procedural wood texture/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.66795, -0.00229144, 0.746688)
operation = 2
size = Vector3(1.13479, 2.14966, 1.3885)
material = ExtResource("28")

[node name="CameraHolder" type="Node3D" parent="."]
transform = Transform3D(0.877582, 0, -0.479427, 0, 1, 0, 0.479427, 0, 0.877582, -36, 2.8, -4)

[node name="RotationX" type="Node3D" parent="CameraHolder"]
transform = Transform3D(1, 0, 0, 0, 0.877582, 0.479427, 0, -0.479427, 0.877582, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraHolder/RotationX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)
fov = 65.0
near = 0.1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Previous" type="Button" parent="UI"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -50.0
offset_right = 97.0
offset_bottom = -30.0
shortcut = SubResource("124")
text = "Previous"

[node name="Next" type="Button" parent="UI"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -50.0
offset_right = -30.0
offset_bottom = -30.0
shortcut = SubResource("126")
text = "Next"

[node name="MaterialName" type="Label" parent="UI"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -44.0
offset_right = 250.0
offset_bottom = -30.0
size_flags_vertical = 0

[node name="Node Overview" type="MeshInstance3D" parent="."]
material_override = SubResource("142")

[connection signal="pressed" from="UI/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="UI/Next" to="." method="_on_Next_pressed"]

[editable path="Testers/Emission"]
